# fx-ai-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
artifacts/m15_gate3a/: cost_table_plan_or_metadata.json  design_m15_derivation_manifest.json  design_m15_inventory.json  effective_n_estimator_spec.json  forward_epoch_adoption_manifest.json  forward_epoch_inventory.json  no_overlap_proof.json  scrub_report.json
artifacts/oanda_archive_2026-05-31/: README.md  candles_manifest.json  fetch_log.jsonl  instruments_inventory.json
artifacts/stage22_0b/: eval_report.md
artifacts/stage22_0c/: eval_report.md
artifacts/stage22_0e/: eval_report.md
artifacts/stage22_0e_v2/: eval_report.md
artifacts/stage22_audit/: audit_results.json
artifacts/stage23_0a/: label_schema.json  validation_report.md
artifacts/stage23_0b/: eval_report.md
artifacts/stage23_0c/: eval_report.md
artifacts/stage23_0c_rev1/: eval_report.md
artifacts/stage23_0d/: eval_report.md
artifacts/stage24_0a/: frozen_entry_streams.json  path_ev_characterisation_report.md
artifacts/stage24_0b/: eval_report.md
artifacts/stage24_0c/: eval_report.md
artifacts/stage24_0d/: eval_report.md
artifacts/stage24_1a/: eval_report.md
artifacts/stage25_0a/: causality_audit.md  dataset_summary.md
artifacts/stage25_0b/: eval_report.md
artifacts/stage25_0c/: eval_report.md
artifacts/stage25_0d/: eval_report.md
artifacts/stage25_0e/: eval_report.md
artifacts/stage25_0f/: eval_report.md
artifacts/stage26_0a/: eval_report.md
artifacts/stage26_0b/: eval_report.md
artifacts/stage26_0c/: eval_report.md
artifacts/stage26_0d/: eval_report.md
artifacts/stage27_0b/: eval_report.md
artifacts/stage27_0c/: eval_report.md
artifacts/stage27_0d/: eval_report.md
artifacts/stage27_0e/: eval_report.md
artifacts/stage27_0f/: eval_report.md
artifacts/stage28_0a/: eval_report.md
artifacts/stage28_0b/: eval_report.md
artifacts/stage28_0c/: eval_report.md
artifacts/stage29_0a/: eval_report.md  phase29_section10_per_target_baseline.json
data/economic_calendar/: events_2025_2026.csv
docs/: architecture.md  automation_harness.md  backtest_design.md  dashboard_manual_verification.md  dashboard_operator_guide.md  design.md  development.md  development_rules.md  git_workflow.md  implementation_contracts.md  iteration1_completion.md  iteration1_implementation_plan.md  iteration2_completion.md  iteration2_implementation_plan.md  m26_implementation_plan.md  operations.md  operator_quickstart.md  phase1_core_design.md  phase6_hardening.md  phase7_roadmap.md  phase8_roadmap.md  phase9_roadmap.md  retention_policy.md  schema_catalog.md
docs/design/: cycle_6_9_summary.md  cycle_6_9_supervisor_loop_memo.md  g2_fix_phase_memo.md  (+187 more)
migrations/: env.py
scripts/: _sequence_cell_harness.py  _sequence_training.py  _windowed_dataset.py  build_feature_store.py  compare_multipair_v10_recent_hr.py  compare_multipair_v11_csi.py  compare_multipair_v12_asymmetric.py  compare_multipair_v13_ensemble.py  compare_multipair_v14_topk.py  compare_multipair_v15_regression.py  compare_multipair_v16_features.py  compare_multipair_v17_lstm.py  compare_multipair_v18_crossasset.py  compare_multipair_v19_causal.py  compare_multipair_v20_portfolio.py  compare_multipair_v22_risk_sizing.py  compare_multipair_v23_realism.py  compare_multipair_v24_calendar.py  compare_multipair_v25_filter.py  compare_multipair_v26_dynamic_sltp.py  compare_multipair_v3_costs.py  compare_multipair_v4_atr.py  compare_multipair_v5_bidask.py  compare_multipair_v6_meta.py  compare_multipair_v7_kelly.py  compare_multipair_v8_risk.py  compare_multipair_v9_orthogonal.py  compare_prod_ablation.py  ctl.py  evaluate_ml_baseline.py  fetch_oanda_archive.py  fetch_oanda_candles.py  gate_p1_pr_b_launcher.py  grid_search_tp_sl_conf.py  paper_open_position.py  provenance_guard.py  record_quotes.py  retrain_production_models.py  run_foundation_t2_roundtrip.py  run_live_loop.py  (+68 more)
tests/: conftest.py  test_smoke.py
tools/: generate_calendar_csv.py  test_labels_bidask_vectorized.py  test_rank_sharpe_aggregation.py
(+649 files in other folders)
